🐛 bug: Add governed ACTIVE package regeneration
